structures update
