# src/modules/structures/controllers/names.controllers.js
@@ -15,7 +15,7 @@ export default {
       await eventsRepo.insert({
         userId: req.currentUser.id,
         timestamp: new Date(),
-        action: 'insert',
+        action: 'create',
         resourceId: structureId,
         resourceType: 'structures',
         subresourceId: 'names',
@@ -30,40 +30,49 @@ export default {
     res.status(201).json(resource);
   },
 
-  // read: async (req, res) => {
-  //   const { structureId } = req.params;
-  //   const structure = await structuresRepo.findById(structureId);
-  //   if (!structure) throw new NotFoundError();
-  //   res.status(200).json(structure);
-  // },
+  read: async (req, res) => {
+    const { structureId, nameId } = req.params;
+    const resource = await structuresRepo.names.findById(structureId, nameId);
+    if (!resource) throw new NotFoundError();
+    res.status(200).json(resource);
+  },
 
-  // update: async (req, res) => {
-  //   const session = client.startSession();
-  //   const { structureId } = req.params;
-  //   const data = req.body;
-  //   const prevState = await structuresRepo.getRowModel(structureId);
-  //   const { result } = await session.withTransaction(async () => {
-  //     await structuresRepo.updateById(structureId, data);
-  //     const nextState = await structuresRepo.getRowModel(structureId, { session });
-  //     await eventsRepo.insert({
-  //       userId: req.currentUser.id,
-  //       timestamp: new Date(),
-  //       operationType: 'update',
-  //       resourceId: structureId,
-  //       resourceType: 'structures',
-  //       prevState,
-  //       nextState,
-  //     }, { session });
-  //   }).catch(async () => session.endSession());
-  //   session.endSession();
-  //   if (!result.ok) throw new ServerError();
-  //   const resource = await structuresRepo.findById(structureId);
-  //   res.status(200).json(resource);
-  // },
+  delete: async (req, res) => {
+    const { structureId, nameId } = req.params;
+    const resource = await structuresRepo.names.findById(structureId, nameId);
+    if (!resource) throw new NotFoundError();
+    await structuresRepo.names.deleteById(structureId, nameId);
+    res.status(200).json({});
+  },
 
-  // list: async (req, res) => {
-  //   const { filters, ...options } = req.query;
-  //   const { data, totalCount } = await structuresRepo.find(filters, options);
-  //   res.status(200).json({ data, totalCount });
-  // },
+  update: async (req, res) => {
+    const session = client.startSession();
+    const { structureId, nameId } = req.params;
+    const data = req.body;
+    const prevState = await structuresRepo.names.findById(structureId, nameId);
+    const { result } = await session.withTransaction(async () => {
+      await structuresRepo.names.updateById(structureId, nameId, data);
+      const nextState = await structuresRepo.getRowModel(structureId, { session });
+      await eventsRepo.insert({
+        userId: req.currentUser.id,
+        timestamp: new Date(),
+        operationType: 'update',
+        resourceId: structureId,
+        resourceType: 'structures',
+        prevState,
+        nextState,
+      }, { session });
+    }).catch(async () => session.endSession());
+    session.endSession();
+    if (!result.ok) throw new ServerError();
+    const resource = await structuresRepo.findById(structureId);
+    res.status(200).json(resource);
+  },
+
+  list: async (req, res) => {
+    const { structureId } = req.params;
+    const { filters, ...options } = req.query;
+    const { data, totalCount } = await structuresRepo.names.find(structureId, filters, options);
+    res.status(200).json({ data, totalCount: totalCount || 0 });
+  },
 };
