# src/modules/structures/structures.repo.js
@@ -1,47 +1,27 @@
 import BaseRepo from '../commons/repositories/base.repo';
 import NestedRepo from '../commons/repositories/nested.repo';
 
-const commonPipeline = [
-  {
-    $lookup: {
-      from: 'users',
-      localField: 'createdBy',
-      foreignField: 'id',
-      as: 'user',
-    },
-  },
-  { $set: { user: { $arrayElemAt: ['$user', 0] } } },
-  { $set: { createdBy: { id: '$user.id', username: '$user.username', avatar: '$user.avatar' } } },
-  {
-    $lookup: {
-      from: 'users',
-      localField: 'updatedBy',
-      foreignField: 'id',
-      as: 'user',
-    },
-  },
-  { $set: { user: { $arrayElemAt: ['$user', 0] } } },
-  { $set: { updatedBy: { id: '$user.id', username: '$user.username', avatar: '$user.avatar' } } },
-];
+const currentNamePipeline = [];
+const alternativePaysageIdPipeline = [];
 
 class StructuresRepository extends BaseRepo {
   async getStatus(id) {
-    return this._collection.findOne({ id }, { projection: { _id: 0, __status: 1 } });
+    const state = await this._collection.findOne({ id }, { projection: { status: 1, redirection: 1 } });
+    return state || {};
   }
 
   async getRowModel(id, { session = null } = {}) {
-    return this._collection.findOne({ id }, { projection: { _id: 0, id: 1, status: 1 } }, { session });
-  }
-
-  async redirect(id, to, { session = null } = {}) {
-    return this._collection.updateOne({ id }, { $set: { __status: 'redirected', __target: to } }, { session });
+    return this._collection.findOne(
+      { id },
+      { projection: { _id: 0, structureStatus: 1 }, session },
+    );
   }
 
   get names() {
     return new NestedRepo({
       collection: this._collectionName,
       field: 'names',
-      pipeline: [...commonPipeline, { $project: { _id: 0 } }],
+      pipeline: [{ $project: { _id: 0, createdAt: 0, updatedAt: 0 } }],
     });
   }
 
@@ -49,7 +29,7 @@ class StructuresRepository extends BaseRepo {
     return new NestedRepo({
       collection: this._collectionName,
       field: 'identifiers',
-      pipeline: [...commonPipeline, { $project: { _id: 0 } }],
+      pipeline: [{ $project: { _id: 0, createdAt: 0, updatedAt: 0 } }],
     });
   }
 }
@@ -57,15 +37,16 @@ class StructuresRepository extends BaseRepo {
 export default new StructuresRepository({
   collection: 'structures',
   pipeline: [
-    ...commonPipeline,
+    ...currentNamePipeline,
+    ...alternativePaysageIdPipeline,
     { $project: {
       _id: 0,
       id: 1,
-      status: { $ifNull: ['$status', 'null'] },
-      createdBy: 1,
-      updatedBy: 1,
-      updatedAt: 1,
-      createdAt: 1,
+      structureStatus: { $ifNull: ['$structureStatus', 'null'] },
+      status: 1,
+      alternativePaysageIds: { $ifNull: ['$alternativePaysageIds', []] },
+      redirection: 1,
+      expiresAt: 1,
     } },
   ],
 });
